--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <nav>
 	<ul>
 
-		<li><a href="javascript:void(0);" title="Home" rel="noopener">Főoldal</a></li>
+		<li><a href="main.html" title="Home" rel="noopener">Főoldal</a></li>
 
 		<li><a href="javascript:void(0);" title="About" rel="noopener">Vélemény</a></li>
 
